# ssim

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  GNUmakefile  GenerateSolution.cmd  LICENSE  README.md
include/rmgr/: ssim-openmp.h  ssim.h
sample/: README.md  rmgr-ssim-sample.cpp
src/: rmgr_ssim.natvis  ssim-cli.cpp  ssim-openmp.c  ssim-openmp.cpp  ssim-version.h.in  ssim.cpp  ssim_avx.cpp  ssim_avx512.cpp  ssim_fma.cpp  ssim_internal.h  ssim_neon.cpp  ssim_simd.h  ssim_sse.cpp
tests/: CMakeLists.txt  rmgr-ssim-tests.cpp  ssim_naive.h
